# text_to_condition

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.devcontainer/: devcontainer.json
src/text_to_condition/: __init__.py  core.py  exporters.py
tests/: test_core.py  test_exporters.py
